data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1525.wast
;; 6. **Loop with False Condition Branch:**    - Test Condition: `if` instruction within a loop where the condition is always false, attempting to branch to an `else` that breaks the loop.    - Constraint: Proper execution of `else` branches without causing infinite loops.    - Relevance: Ensures accurate distinction between `then` and `else` in breaking loops.

(assert_invalid
  (module
    (func $loop-if-else-break
      (loop (result i32)
        (if (result i32)
          (i32.const 0)
          (then (i32.const 1))
          (else (br 1))
        )
      )
    )
  )
  "type mismatch"
)